fix: fix gap between timer and grid

--- a/nonograms/style.css
+++ b/nonograms/style.css
@@ -16,7 +16,7 @@
   align-items: center;
   align-content: center;
   height: 100vh;
-  gap: 3vw;
+  gap: 5vh;
 }
 
 .background-image {
